plone_fb_comcentral/static/CC.css
/*CSS for Command Central */
.navbar {
    list-style-type: none;
    margin: 0;
    padding: 0;
    padding-top: 6px;
    padding-bottom: 6px;
}

.navbar li {
    display: inline; 
}

a.nav:link, a.nav:visited {
    font-weight: bold;
    background-color: #4499FF;
    color: #000000;
    text-align: center;
    padding: 6px;
    text-decoration: none;
    text-transform: uppercase;
}

a.nav:hover, a.nav.active,
div.overlay a.nav:hover, div.overlay a.nav:active {
    color: #FFFFFF;
    background-color: #0066CC;
}

h1.fb-cc-title {
    text-align: center;
    background-color: #f0fff0;
    font-size: 1.4em;
    margin-bottom: 0.5em;
}

/*CSS for Messaging */
.messages {
    height: 280px;
    overflow-y: auto;
    padding: 0.5em 0.5em 1em 0.5em;
    margin: 0 0.5em 1em 0;
    border: 1px solid #c0c0c0;
    background-color: #fffff6;
}

.helpMessage.error {
    opacity: 1;
    color: red;
    -webkit-transition: opacity .25s linear;
}

.helpMessage.info {
    opacity: 1;
    color: green;
    -webkit-transition: opacity .25s linear;
}

.helpMessage.hidden {
    opacity: 0 !important;
    -webkit-transition: opacity .25s linear;
}

/*
.message .public, .privateChat { color: black; }
.message .private { color: red; }
.message .server { color: green; }
.message .action { color: purple; }
*/

.roomList {
    float: left;
    border-right: 3px solid;
    width: 20%;
    height: 380px;
}

.fb-messages-chat {
    margin: 0;
    float: right;
    width: 78%;
}

.whoispresent {
    float: right;
    width: 180px;
    margin-left: 0.5em;
}

input.fb-message-input {
    width: 400px;
}

.chat-sender, .chat-content {
    padding: 0.5em;
    margin: 0.25em 0 0;
}

.chat-sender {
    color: #333 !important;
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.33);
    -webkit-font-smoothing: antialiased;
    padding-top: .5em;
}

.chat-content {
    -webkit-border-radius: 5px;
    -moz-border-radius:5px;
    border-radius: 5px;
}

.chat-line-own {
    clear: both;
    text-align: right;
    vertical-align: middle;
}

.chat-line-own .chat-sender {
    display: inline-block;
    float: right;
    padding-top: .5em;
}

.user-portrait {
    width: 35px;
    padding-top: .25em;
    vertical-align: middle;
}

.chat-line-own .user-portrait {
    float: right;
}

.chat-line-foreign .user-portrait {
    float: left;
}

.chat-line-own .chat-content {
    display: inline-block;
    float: right;
    background-color: hsl(58, 46%, 67%) !important;
    background-repeat: repeat-x;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#edecce", endColorstr="#d1ce84");
    background-image: -khtml-gradient(linear, left top, left bottom, from(#edecce), to(#d1ce84));
    background-image: -moz-linear-gradient(top, #edecce, #d1ce84);
    background-image: -ms-linear-gradient(top, #edecce, #d1ce84);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #edecce), color-stop(100%, #d1ce84));
    background-image: -webkit-linear-gradient(top, #edecce, #d1ce84);
    background-image: -o-linear-gradient(top, #edecce, #d1ce84);
    background-image: linear-gradient(#edecce, #d1ce84);
    border-color: #d1ce84 #d1ce84 hsl(58, 46%, 62%);
    color: #333 !important;
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.33);
    -webkit-font-smoothing: antialiased;
}

.chat-line-foreign {
    text-align: left;
    clear: both;
}

.chat-line-foreign .chat-sender {
    float: left;
    display: inline-block;
}

.chat-line-foreign .chat-content {
    display: inline-block;
    background-color: hsl(284, 46%, 67%) !important;
    background-repeat: repeat-x;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e4ceed", endColorstr="#bc84d1");
    background-image: -khtml-gradient(linear, left top, left bottom, from(#e4ceed), to(#bc84d1));
    background-image: -moz-linear-gradient(top, #e4ceed, #bc84d1);
    background-image: -ms-linear-gradient(top, #e4ceed, #bc84d1);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e4ceed), color-stop(100%, #bc84d1));
    background-image: -webkit-linear-gradient(top, #e4ceed, #bc84d1);
    background-image: -o-linear-gradient(top, #e4ceed, #bc84d1);
    background-image: linear-gradient(#e4ceed, #bc84d1);
    border-color: #bc84d1 #bc84d1 hsl(284, 46%, 62%);
    color: #333 !important;
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.33);
    -webkit-font-smoothing: antialiased;
}

.fb-newroom-input, .fb-newroom-submit {
    width: 100px;
    display: block;
}

.fb-messages-chat h1 {
    margin-top: 0px;
}

.server-message-type {
    font-weight: bold;
}

.user-status-marker {
    font-weight: bold;
}

.user-reference {
    font-style: italic;
}

.room.active {
    font-weight: bold;
}

.user .in-room {
    font-weight: bold;
}

/* CSS for Activity Stream */
.activities {
    height: 280px;
    width: 550px;
    overflow-y: auto;
    padding-bottom: 20px;
}

.activity {
    border-bottom: 1px solid black;
    padding-top: 5px;
    padding-bottom: 5px;
}

.activity:last-child {
    border-bottom: 0px;
}

.activity .description {
    text-overflow: ellipsis;
    width: 330px;
    white-space: nowrap;
    overflow:hidden;
}

.description {
    width: 450px;
    word-wrap: break-word;
}

.users {
    margin-top: 1em;
}

summary div {
    margin-left: 10px;
}

.details { 
    margin-left: 20px; 
}

/* CSS for Broadcasts */
.broadcasts {
    height: 280px;
    overflow-y: auto;
    padding-bottom: 20px;
    max-width: 300px;
}

.broadcast:not(:last-child) {
    border-bottom: 1px solid;
    padding-bottom: 5px;
    margin-bottom: 5px;
}

/* CSS for Create Broadcast */
.fb_create_broadcast .form_control {
    margin: 1em;
}

.fb_create_broadcast .message * {
    vertical-align: middle;
}

/* Overlay for Plone */

.fb-overlay-content {
    height: 450px;
    width: 600px;
    padding: 1em;
    background-color: #FFFFFF;
    border: 1px solid #999999;
    box-shadow: 0 0 3em 0.5em #666666;
    white-space: normal;
}

.fb-close {
    z-index: 100;
}

/* Needed for the simulate activity only */

a.rnav:link,a.rnav:visited {
    font-weight: bold;
    background-color: #FF6666;
    color: #000000;
    text-align: center;
    padding: 6px;
    text-decoration: none;
    text-transform: uppercase;
}
a.rnav:hover, a.rnav:active, a.rnav.active,
div.overlay a.rnav:hover, div.overlay a.rnav:active {
    color: #FFFFFF;
    background-color: red;
}

.fb_simulate_activity .form_control {
    margin: 1em;
}

